Tue Jul 13 15:41:24 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_data.c libgamin/gam_api.c: fixed FAMMonitorDirectory2()
	  and FAMMonitorFile2() they should now implement the correct behaviour
	* server/gam_dnotify.c server/gam_node.c server/gam_node.h
	  server/gam_poll.c server/gam_server.c server/gam_tree.c: removed
	  threading and locking, this should still work for the current
	  constraints
	* tests/testing.c: adding wait and updated to allow
	  FAMMonitorDirectory2 testing with an extra arg to mondir
	* TODO: updated

Fri Jun 18 15:28:32 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/fam.h libgamin/gam_api.c: the new version of the
	  FAMCONNECTION_GETFD macro was buggy. Applied patch from
	  hadess.

Fri Jun 18 14:25:04 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* autogen.sh: drop special dependancies a given version of the
	  autotools

Fri Jun 18 14:12:59 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_protocol.h server/gam_connection.h: workaround
	  gtk-doc parsing limitations
	* configure.in Makefile.am gamin.spec.in libgamin/Makefile.am:
	  emulation of libfam wasn't sufficient to compile fam-dependant
	  code as pointed by hadess

Fri Jun 18 09:42:47 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: preparing first release of 0.0.1
	* tests/Makefile.am tests/testing.c: a bit more work on the
	  testing framework

Thu Jun 17 14:32:07 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/Makefile.am libgamin/testing.c tests/Makefile.am
	  tests/testing.c: setup the test environment
	* tests/scenario/tst1 tests/result/tst1: add first test

Thu Jun 17 00:38:33 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c libgamin/gam_fork.c libgamin/gamin.c
	  libgamin/testing.c server/gam_channel.c: renamed the ID
	  environment variable to GAM_CLIENT_ID

Wed Jun 16 23:35:13 CEST 2004 Daniel Veillard <veillard@redhat.com>
