@@ -1,3 +1,12 @@
+Fri Jul 16 13:42:37 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* gamin.spec.in configure.in: preparing 0.0.2 release
+	* libgamin/gam_api.c libgamin/gam_data.c libgamin/gam_data.h:
+	  made the client side restartable, i.e. if the server exists
+	  a new connection is made and monitors are reestablished
+	  seems to work more or less okay.
+	* TODO: updated.
+
 Tue Jul 13 15:41:24 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* libgamin/gam_data.c libgamin/gam_api.c: fixed FAMMonitorDirectory2()
